// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail renders with different colours 1`] = `
Array [
  <title>
    Email Icon
  </title>,
  <g
    fill="#facade"
    stroke="#c0ffee"
  >
    <path />
  </g>,
]
`;

exports[`2. iconfacebook renders with different colours 1`] = `
Array [
  <title>
    Facebook Icon
  </title>,
  <g
    fill="#facade"
    stroke="#c0ffee"
  >
    <path />
  </g>,
]
`;

exports[`3. iconforwardarrow renders with different colours 1`] = `
<g
  fill="#facade"
>
  <path />
</g>
`;

exports[`4. iconstar renders with different colours 1`] = `
Array [
  <title>
    Save star
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`5. iconcopylink renders with different colours 1`] = `
Array [
  <title>
    Copy link to clipboard
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`6. iconsavebookmark renders with different colours 1`] = `
Array [
  <title>
    Save to My Articles
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`7. icontwitter renders with different colours 1`] = `
Array [
  <title>
    Twitter Icon
  </title>,
  <g>
    <path
      fill="#facade"
      stroke="#c0ffee"
    />
  </g>,
  <defs>
    <clipPath>
      <rect
        fill="white"
      />
    </clipPath>
  </defs>,
]
`;

exports[`8. iconvideo renders with different colours 1`] = `
Array [
  <title>
    Video Icon
  </title>,
  <rect
    fill="#facade"
    stroke="#c0ffee"
  />,
  <polygon
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`9. iconvideo360player renders with different colours 1`] = `
Array [
  <title>
    Video 360 Player Icon
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`10. thestlogo renders with different colours 1`] = `
Array [
  <title>
    ST
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`11. thetimeslogo renders with different colours 1`] = `
Array [
  <title>
    The Times
  </title>,
  <path
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`12. closeicon renders with different colours 1`] = `
Array [
  <title />,
  <path
    fill="white"
    stroke="white"
  />,
]
`;

exports[`13. iconforwardchevron renders with different colours 1`] = `
<g
  fill="#facade"
>
  <path />
</g>
`;

exports[`14. iconactivityindicator renders with different colours 1`] = `
<activity-indicator__ActivityIndicatorContainer>
  <div>
    <activity-indicator__ActivityIndicatorSpinner>
      <div />
    </activity-indicator__ActivityIndicatorSpinner>
  </div>
</activity-indicator__ActivityIndicatorContainer>
`;

exports[`15. iconcheck renders with different colours 1`] = `
Array [
  <title>
    Check Icon
  </title>,
  <mask>
    <path
      fill="#0A0A0A"
    />
  </mask>,
  <g>
    <rect
      fill="#01000D"
    />
  </g>,
]
`;

exports[`16. playermodalicon renders with different colours 1`] = `
Array [
  <title>
    Player Modal Icon
  </title>,
  <mask>
    <path
      fill="#0A0A0A"
    />
  </mask>,
  <g>
    <rect
      fill="#01000D"
    />
  </g>,
]
`;

exports[`17. playerback renders with different colours 1`] = `
Array [
  <title>
    Player Back Icon
  </title>,
  <mask>
    <path
      fill="black"
    />
  </mask>,
  <g>
    <rect
      fill="#01000D"
    />
  </g>,
]
`;

exports[`18. playerfront renders with different colours 1`] = `
Array [
  <title>
    Player Front Icon
  </title>,
  <mask>
    <path
      fill="black"
    />
  </mask>,
  <g>
    <rect
      fill="#01000D"
    />
  </g>,
]
`;

exports[`19. playicon renders with different colours 1`] = `
Array [
  <title>
    Play Icon
  </title>,
  <mask>
    <path
      fill="black"
    />
  </mask>,
  <g>
    <rect
      fill="black"
    />
  </g>,
]
`;

exports[`20. pauseicon renders with different colours 1`] = `
Array [
  <title>
    Pause Icon
  </title>,
  <mask>
    <path
      fill="black"
    />
  </mask>,
  <g>
    <rect
      fill="black"
    />
  </g>,
]
`;

exports[`21. iconvolume renders with different colours 1`] = `
Array [
  <title>
    Volume Icon
  </title>,
  <mask>
    <path
      fill="#0A0A0A"
    />
  </mask>,
  <g>
    <rect
      fill="#01000D"
    />
  </g>,
]
`;

exports[`22. audiocloseicon renders with different colours 1`] = `
Array [
  <title>
    Audio Close Icon
  </title>,
  <mask>
    <path
      fill="#000"
    />
  </mask>,
  <g>
    <rect
      fill="#000"
    />
  </g>,
]
`;
